# prodpadlm-client

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
prodpadlm_client/: __init__.py  client.py
prodpadlm_client/client_types/: _types.py  messages.py  stream_messages.py
prodpadlm_client/resources/: api.py
